- Added: Emails can now be sent directly or using the WordPress cron
- Added: Integration with new reCaptcha plugin to the reCaptcha Addon
- Added: Option for Admin created members to generate an invoice to the membership
- Added: Option for manual invoice created to keep the expire date of the membership the same
- Added: Addon to hide protected pages from visitor search
- Fixed: Multiple Invoice creation
- Fixed: Invoice status not changing for free payments
- Fixed: Protection with many addons enabled
- Fixed: Mailchimp list for deactivated users with drop down memberships
- Fixed: Membership Script and Style conflict on other admin pages
- Fixed: URL Protection Addon on https
- Fixed: Media Protection Addon
- Fixed: Invoices with no gateways no longer checked by cron and not automatically marked PAID

1.0.3.5
----------------------------------------------------------------------
- Added: Added a filter "ms_rule_url_model_exception_rule" to set exception for URL restriction addon
- Improved: Remove Paypal "Ship to my billing address" option from express gateway as this is digital product
- Improved: wp_get_sites() deprecated function is replaced with get_sites()
- Fixed: Protection rule could not be access from subsites when network protection was enabled
- Fixed: Fatal error - Uncaught Error: [] operator not supported for strings
- Fixed: Post protection option could not be changed from post edit screen
- Fixed: Issue with MS_PAYPAL_TRIAL_SUBSCRIPTION when trial is enabled, members account was not activated
- Fixed: Selection sliders were not working in some cases
- Fixed: Second attribute could not be created
- Fixed: New members not being added by M2 2Checkout Gateway
- Fixed: Duplicate Content Protection Message when custom message is enabled
- Fixed: Images are not getting load if media protection is enabled
- Fixed: Applying Membership 2 Coupon is giving fatal error in PHP 7.1.3
- Fixed: Membership was not showing in account page